Modification du makefile de l'ex07 du day01

--- a/day01/ex07/Makefile
+++ b/day01/ex07/Makefile
@@ -26,7 +26,7 @@ $(NAME): $(OBJ)
 
 $(OBJ_PATH)%.o: $(SRC_PATH)%.cpp
 	@mkdir $(OBJ_PATH) 2> /dev/null || true
-	$(CC) $(INCLUDE) -o $@ -c $<
+	$(CC) $(FLAGS) $(INCLUDE) -o $@ -c $<
 
 clean:
 	/bin/rm -f $(OBJ)
